--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/helpers": "^1.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
